# genaiworkshop

./: README.md  main.py  pyproject.toml  replit.nix  requirements.txt
attached_assets/: Pasted--1-Error-TypeError-bool-object-is-not-callable-Cause-This-error-occurs-when-a-boolean-variable-1743924697285.txt  Pasted--Generative-AI-LLMs-Workshop-App-This-interactive-app-is-built-to-teach-and-demonstrate-real-wor-1743776162227.txt  Pasted-Below-is-the-enhanced-version-of-your-comprehensive-resource-guide-I-ve-preserved-all-original-cont-1743927209690.txt  Pasted-Resource-Guide-for-a-15-Hour-Workshop-on-Generative-AI-and-LLMs-This-guide-is-organized-by-module-w-1743922372705.txt
modules/: chatbot_app.py  rag_pipeline.py
resources/: ai_workshop_tools.txt  ai_workshop_tools_links.md
sqlite-autoconf-3410200/: Makefile  config.status
utils/: access_code_utils.py  admin_utils.py  api_key_utils.py  auth_utils.py  db_utils.py  file_processing.py  messaging_utils.py  model_utils.py  openai_utils.py  progress_utils.py  quiz_utils.py
workshop_modules/: advanced_llms.py  genai_intro.py  python_basics.py  rag_pipeline.py
